--- a/index.html
+++ b/index.html
@@ -21,10 +21,17 @@
 
 <li>Water Melons</li>
 <!-- <img src="banane.jpg" id="banana"> -->
-<img src="images.jpeg" id="apple">
 
 </ul>
-
+<div>
+<img src="images.jpeg" id="apple">
+</div>
+<div>
+<img src="bananas.jpg" id="bananas">
+</div>
+<div>
+<img src="range.jpeg" id="range">
+</div>
 <h3 id="veges">Vegetables</h3>
 
 <ul id="vegList">
@@ -36,6 +43,9 @@
 <li>Kales</li>
 
 </ul>
+<div><img src="red-onion.jpg" id="onion"></div>
+<div><img src="tomato.jpeg" id="tomato"></div>
+<div><img src="Cabbage2-scaled.jpg" id="cabbege"></div>
 <script src="index.js"></script>
 </body>
 </html>
